# rainbow

./: README.md  before meeting.txt  간트 차트 최종.xlsx  간트 차트.xlsx
Android/: settings.gradle
Android/app/src/androidTest/java/com/example/googlemapsandroid/: ExampleInstrumentedTest.java
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/googlemapsandroid/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/googlemapsandroid/: ExampleUnitTest.java
main/: CMakeLists.txt  aws.cpp  aws.h  coordinate.js  dbserver.cpp  dbserver.h  form.cpp  form.h  form.ui  geocode_data_manager.cpp  google_maps.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
meeting/: 10월12일 회의록  11월3일 회의록  9월29일 회의록  first week.txt  발표 후 회의(9.15).txt
server/: CMakeLists.txt  aws.cpp  aws.h  coordinate.js  dbserver.cpp  dbserver.h  form.cpp  form.h  form.ui  geocode_data_manager.h  google_maps.html  googlemap.qml  locationinfo.h  main.cpp  mainwindow.cpp  mainwindow.ui  resource.qrc  s3_examples.h  server.txt
web/: form.cpp  form.h  form.ui  google_maps.html
